//
// vim:ts=4:sw=4:ai:et:si:sts=4
//
import "reqtype.proto";
import "settings.proto";
import "accounts.proto";
import "pcs.proto";

message HavokRequest {
    required uint32 protocol_version = 1;

    required ReqType request_type = 2;

    // Required for GET_SETTING and SET_SETTING
    optional ReqSettingsType settings_data = 16;

    // Required for LOAD_ACCOUNT, LOAD_ACCOUNT_BY_CONFIRM, SAVE_ACCOUNT
    // and GET_PC_LIST
    optional ReqAccountType account_data = 17;

    // Required for LOAD_PC and SAVE_PC and FIND_PC
    optional ReqPCType pc_data = 18;
}
