//
// vim:ts=4:sw=4:ai:et:si:sts=4
//

message ReqPCType {
    optional uint32 id = 1801;
    optional uint32 account_id = 1802;
    optional string name = 1803;
    optional bool complete = 1804;
    optional uint32 race_id = 1805;
    optional int32 align_moral = 1806;
    optional int32 align_ethical = 1807;
    optional int32 strength = 1808;
    optional int32 dexterity = 1809;
    optional int32 constitution = 1810;
    optional int32 intelligence = 1811;
    optional int32 wisdom = 1812;
    optional int32 charisma = 1813;
    optional uint32 social_class = 1814;
    optional uint32 birth_order = 1815;
    optional uint32 siblings = 1816;
    optional bool parents_married = 1817;
    optional uint32 max_hit_points = 1818;
    optional uint32 hit_points = 1819;
    optional uint32 height = 1820;
    optional uint32 weight = 1821;
    optional uint32 age = 1822;
    optional uint32 hair_color = 1823;
    optional uint32 eye_color = 1824;
    optional string hair_length = 1825;
    optional uint32 skin_tone = 1826;
    optional uint32 experience = 1827;
}
